--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>FeedGordon</title>
     <base href="/">
-    <script src="https://authedmine.com/lib/simple-ui.min.js" async></script>
+    <script src="https://authedmine.com/lib/authedmine.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
